--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "mysql2": "^3.17.3",
     "next": "16.1.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "recharts": "^3.7.0"
   },
   "devDependencies": {
     "@types/canvas-confetti": "^1.9.0",
